Replaced default content with homepage

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
 <footer>
   <div class="inner">
-    <p>{{ site.footer-text }}</p>
+    <p>
+      <a href="{{ site.baseurl }}/impressum/">Site Contact / Impressum</a>.
+      <br>
+      {{ site.footer-text }}
+    </p>
   </div>
 </footer>
