--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ body {
   font-weight: 400;
   color: rgba({{ site.text-color }}, .8);
   background-color: rgb({{ site.background-color }});
+  background-image: url(../images/bg.png);
   background-repeat: no-repeat;
-  background-size: 100%;
 }
 html, body {
   height: 100%;
