Added buttons for sharing posts on social networks

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,11 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome.css">
 {% endif %}
 <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+
+<!-- For share bar -->
+<link rel="stylesheet" href="{{ site.baseurl }}/css/share-bar.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!--[if gte IE 9]>
   <style type="text/css">
     .gradient {
