--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,9 @@ layout: default
       {% endif %}
     {% endif %}
   {% endif %}
+
+  {% include share-bar.html %}
+
 </article>
 
 {% if site.display-next-prev-post and page.previous.url or site.display-next-prev-post and page.next.url %}
