Add RSS link to blog posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,6 +46,8 @@ layout: default
 </div>
 {% endif %}
 
+<p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p>
+
 {% if site.disqus-shortname %}
 <div id="disqus_thread"></div>
 <script type="text/javascript">
