--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,17 +30,17 @@ layout: default
 {% if site.display-next-prev-post and page.previous.url or site.display-next-prev-post and page.next.url %}
 <div class="pagination clearfix">
   <div class="left">
-    {% if page.next.url %}
-      <a href="{{ page.next.url | prepend: site.baseurl }}">‹ {{ site.var_next_post }}</a>
+    {% if page.previous.url %}
+      <a href="{{ page.previous.url | prepend: site.baseurl }}">‹ {{ site.var_previous_post }}</a>
     {% else %}
-      <span class="disabled">‹ {{ site.var_next_post }}</span>
+      <span class="disabled">‹ {{ site.var_previous_post }}</span>
     {% endif %}
   </div>
   <div class="right">
-    {% if page.previous.url %}
-      <a href="{{ page.previous.url | prepend: site.baseurl }}">{{ site.var_previous_post }} ›</a>
+    {% if page.next.url %}
+      <a href="{{ page.next.url | prepend: site.baseurl }}">{{ site.var_next_post }} ›</a>
     {% else %}
-      <span class="disabled">{{ site.var_previous_post }} ›</span>
+      <span class="disabled">{{ site.var_next_post }} ›</span>
     {% endif %}
   </div>
 </div>
