--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,9 @@ layout: default
 </div>
 {% endif %}
 
-<p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p>
+  <p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a>
+  <a href="https://twitter.com/transactionblog" class="twitter-follow-button" data-show-count="false">Follow @transactionblog</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </p>
 
 {% if site.disqus-shortname %}
 <div id="disqus_thread"></div>
