Rearrange RSS and Twitter buttons

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,12 @@ layout: default
     {% endif %}
   {% endif %}
 
+<p class="rss-subscribe">
+<a href="https://twitter.com/transactionblog" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @transactionblog</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br>
+<a href="/feed.xml" class="feed">Subscribe to news feed</a>
+</p>
+
   {% include share-bar.html %}
 
 </article>
@@ -45,10 +51,6 @@ layout: default
   </div>
 </div>
 {% endif %}
-
-  <p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a>
-  <a href="https://twitter.com/transactionblog" class="twitter-follow-button" data-show-count="false">Follow @transactionblog</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </p>
 
 {% if site.disqus-shortname %}
 <div id="disqus_thread"></div>
