Add privacy statement

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,10 @@
   <div class="inner">
     <p>
       <a href="{{ site.baseurl }}/impressum/">Site Contact / Impressum</a>.
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      <a href="{{ site.baseurl }}/datenschutzerklaerung/">Privacy Statement / Datenschutzerkl&auml;rung</a>.
       <br>
       {{ site.footer-text }}
     </p>
