--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,6 +66,7 @@
   </style>
 <![endif]-->
 
+{% if jekyll.environment == production %}
 <!-- Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -78,6 +79,7 @@
   ga('send', 'pageview');
 
 </script>
+{% endif %}
 
 {% if page.home != true or site.show-subtitle == false and site.display-social-icons == false %}
 <style>
