--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,7 +66,7 @@
   </style>
 <![endif]-->
 
-{% if jekyll.environment == production %}
+{% if jekyll.environment != "development" %}
 <!-- Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -77,7 +77,6 @@
   ga('set', 'anonymizeIp', true);
   ga('create', 'UA-99218609-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 {% endif %}
 
