--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,7 +56,7 @@
 
 <!-- For share bar -->
 <link rel="stylesheet" href="{{ site.baseurl }}/css/share-bar.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 
 <!--[if gte IE 9]>
   <style type="text/css">
