--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,10 +43,9 @@
 {% endif %}">
 <!-- /og tags -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/js/jquery-2.2.4/jquery-2.2.4.min.js"></script>
 <script src="{{ site.baseurl }}/js/modernizr.js"></script>
 <script src="{{ site.baseurl }}/js/fitvids.js"></script>
-<!--<link href='//fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600,900|Crimson+Text:700italic,600,600italic,400,700,400italic' rel='stylesheet' type='text/css'>-->
 <link rel='stylesheet' href='{{ site.baseurl }}/css/crimson-text-v8.css' type='text/css'>
 <link rel='stylesheet' href='{{ site.baseurl }}/css/source-code-pro-v7.css' type='text/css'>
 <link rel='stylesheet' href='{{ site.baseurl }}/css/source-sans-pro-v11.css' type='text/css'>
