Remove site icon
Signed-off-by: Thomas Zimmermann <contact@tzimmermann.org>

--- a/css/style.css
+++ b/css/style.css
@@ -491,5 +491,5 @@ nav a.current {
 .feed {
   margin-left: 0px;
   padding: 0 0 0 31px;
-  background: url("../images/feed-icon-28x28.png") no-repeat 0 50%;
+/*  background: url("../images/feed-icon-28x28.png") no-repeat 0 50%; */
 }
